--- a/Flaskenv/templates/layouts/index.html
+++ b/Flaskenv/templates/layouts/index.html
@@ -34,7 +34,7 @@
 {% endblock %}
 
 {% block body %}
-    <body>
+    <body style="font-family: 'Poppins', sans-serif">
     </div>
     <div class="bgimg-1" style="position:relative">
         <div class="flex-parent hero-desktop">
