--- a/Flaskenv/templates/layouts/navbar.html
+++ b/Flaskenv/templates/layouts/navbar.html
@@ -16,10 +16,10 @@
     {#    background-color: #000000;#}
     {#    color: #FFFFFF;#}
 </style>
-<nav class="navbar navbar-expand-lg navbar-light bg-white sticky">
+<nav class="navbar navbar-expand-lg navbar-light bg-* sticky" style="font-family: 'Poppins', sans-serif">
     <div class="container-fluid">
     <a class="navbar-brand" href="{{url_for('index')}}">
-        <img src="/static/assets/elimin8!.jpg" width="100rem" height="50rem" class="center" alt="">
+        <img src="/static/assets/image_6483441.JPG" width="75rem" height="50rem" class="center" alt="">
     </a>
     {#<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
