--- a/Flaskenv/static/styles/partners.css
+++ b/Flaskenv/static/styles/partners.css
@@ -13,27 +13,42 @@ h8 {
     font-size: 25px;
     color: #000000;
 }
-body {
-    color: #000000;
-}
-/* Float four columns side by side */
-.column {
+
+body 
+     {
+        color:#000000;
+        background: linear-gradient(-45deg, #ffffff, #ffffff,#e7ffff,#ffffff);
+                background-size: 400% 400%;
+                animation: gradient 10s ease infinite;
+                height: 100vh;
+            }
+    
+            @keyframes gradient {
+                0% {
+                    background-position: 0% 50%;
+                }
+                50% {
+                    background-position: 100% 50%;
+                }
+                100% {
+                    background-position: 0% 50%;
+                }
+            }
+
+            .column {
     float: left;
     width: 25%;
     padding: 0 10px;
 }
 
-/* Remove extra left and right margins, due to padding */
 .row {margin: 0 -5px;}
 
-/* Clear floats after the columns */
 .row:after {
     content: "";
     display: table;
     clear: both;
 }
 
-/* Style the counter cards */
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     padding: 16px;
