--- a/Flaskenv/templates/aboutus/founders.html
+++ b/Flaskenv/templates/aboutus/founders.html
@@ -6,82 +6,13 @@
         <meta charset="UTF-8">
         <title>Project ELIMIN8|Founders</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='styles/founders.css') }}">
-
-        {#<style>#}
-{#    h1 {#}
-{#        display: flex;#}
-{#        justify-content: center;#}
-{#        color: #000000;#}
-{#    }#}
-{#    body {#}
-{#        font-family: Arial, Helvetica, sans-serif;#}
-{#    }#}
-{##}
-{#    .flip-card {#}
-{#        background-color: transparent;#}
-{#        width: 300px;#}
-{#        height: 300px;#}
-{#        perspective: 1000px;#}
-{#    }#}
-{##}
-{#    .flip-card-inner {#}
-{#        position: relative;#}
-{#        width: 100%;#}
-{#        height: 100%;#}
-{#        text-align: center;#}
-{#        transition: transform 0.6s;#}
-{#        transform-style: preserve-3d;#}
-{#        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);#}
-{#    }#}
-{##}
-{#    .flip-card:hover .flip-card-inner {#}
-{#        transform: rotateY(180deg);#}
-{#    }#}
-{##}
-{#    .flip-card-front, .flip-card-back {#}
-{#        position: absolute;#}
-{#        width: 100%;#}
-{#        height: 100%;#}
-{#        -webkit-backface-visibility: hidden;#}
-{#        backface-visibility: hidden;#}
-{#    }#}
-{##}
-{#    .flip-card-front {#}
-{#        background-color: #bbb;#}
-{#        color: black;#}
-{#    }#}
-{##}
-{#    .flip-card-back {#}
-{#        background-color: #FFFFFF;#}
-{#        color: #000000;#}
-{#        transform: rotateY(180deg);#}
-{#    }#}
-{#    container {#}
-{#        display: flex;#}
-{#        flex-direction: row;#}
-{#        flex-wrap: wrap;#}
-{#        justify-content: space-evenly;#}
-{#        align-items: center;#}
-{#        align-content: center;#}
-{#    }#}
-{#    container1 {#}
-{#        display: flex;#}
-{#        flex-direction: row;#}
-{#        flex-wrap: wrap;#}
-{#        justify-content: center;#}
-{#        align-items: center;#}
-{#        align-content: center;#}
-{#    }#}
-</style>
     </head>
 {% endblock %}
 {% block body %}
-<body  style="background-image: url({{ url_for('static', filename='assets/white-unsplash-9d0375d2.jpg') }});
-       background-repeat: no-repeat;
-       background-size:100% 100%;">
+<body style="font-family: 'Poppins', sans-serif">
 <br>
 <h1>Our Founders</h1>
-<br><br><br><br>
+
 <container>
 <div class="flip-card">
     <div class="flip-card-inner">
@@ -112,7 +43,6 @@
         </div>
     </div>
 </container>
-<br><br><br><br>
 <fieldset>
     <div class="flip-card">
         <div class="flip-card-inner">
@@ -129,7 +59,6 @@
         </div>
     </div>
 </fieldset>
-<br><br><br><br>
 </body>
 {% endblock %}
 
