--- a/Flaskenv/templates/aboutus/partners.html
+++ b/Flaskenv/templates/aboutus/partners.html
@@ -6,67 +6,17 @@
     <meta charset="UTF-8">
     <title>Project ELIMIN8|Partners</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/partners.css') }}">
-    {#    <style>#}
-{#      h1 {#}
-{#          display: flex;#}
-{#          justify-content: center;#}
-{#          color: #000000;#}
-{#      }#}
-{#      hr {#}
-{#          width: 25%;#}
-{#      }#}
-{#      h8 {#}
-{#          display: flex;#}
-{#          justify-content: center;#}
-{#          font-size: 25px;#}
-{#          color: #000000;#}
-{#      }#}
-{#      body {#}
-{#          color: #000000;#}
-{#      }#}
-{#      /* Float four columns side by side */#}
-{#      .column {#}
-{#          float: left;#}
-{#          width: 25%;#}
-{#          padding: 0 10px;#}
-{#      }#}
-{##}
-{#      /* Remove extra left and right margins, due to padding */#}
-{#      .row {margin: 0 -5px;}#}
-{##}
-{#      /* Clear floats after the columns */#}
-{#      .row:after {#}
-{#          content: "";#}
-{#          display: table;#}
-{#          clear: both;#}
-{#      }#}
-{##}
-{#      /* Style the counter cards */#}
-{#      .card {#}
-{#          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);#}
-{#          padding: 16px;#}
-{#          text-align: center;#}
-{#          background-color: #f1f1f1;#}
-{##}
-{#      }#}
-{#      h9 {#}
-{#          font-size: 25px;#}
-{##}
-{#      }#}
 </head>
 {% endblock %}
 {% block body %}
-<body style=" background-image: url({{ url_for('static', filename='assets/white-unsplash-9d0375d2.jpg') }});
-        background-repeat: no-repeat;
-        background-size:100% 100%;">
+<body style="font-family: 'Poppins', sans-serif">
 <br>
     <h1>Our Partners</h1>
 <hr/>
 <h8>
     We are honored to be partnered with the following organizations
 </h8>
-    <br>
-    <div class="row" style="justify-content:center">
+    <div class="row" style="justify-content:center;margin-top:5rem;margin-bottom:2rem;">
         <div class="column">
             <div class="card">
                 <center>
@@ -100,8 +50,7 @@
             </div>
         </div>
     </div>
-<br>
-<div class="row" style="justify-content:center">
+<div class="row" style="justify-content:center; margin-bottom:5rem;">
     <div class="column">
         <div class="card">
             <center>
@@ -112,7 +61,6 @@
             </center>
         </div>
     </div>
-<br>
     <div class="column">
         <div class="card">
             <center>
@@ -121,7 +69,6 @@
             </center>
         </div>
     </div>
-<br>
     <div class="column">
         <div class="card">
             <center>
@@ -131,19 +78,6 @@
         </div>
     </div>
 </div>
-<br><br>
-{#    <div class="card" style="width:25rem;height:10rem;justify-content:center;padding-bottom:50px">#}
-{#        <img style="border-radius: 5px 5px 0 0;width:25rem;" src="static/assets/DMHTC_Listing_Gallery_Jimboslogo.jpg" alt="Avatar">#}
-{#    </div>#}
-{#    <div class="card" style="width:25rem;height:10rem;justify-content:center">#}
-{#        <img style="border-radius: 5px 5px 0 0;width:25rem;" src="static/assets/leucadia.jpg" alt="Avatar">#}
-{#    </div>#}
-{##}
-{#    <div class="card">#}
-{#        <img style="display:flex;justify-content:center;width:50rem;height:25rem" src="static/assets/capison.jpg" alt="Avatar" style="width:100rem">#}
-{#        <div class="container">#}
-{#        </div>#}
-{#    </div>#}
 </body>
 {% endblock %}
 
