--- a/Flaskenv/templates/layouts/base.html
+++ b/Flaskenv/templates/layouts/base.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Poppins" />
     <link rel="stylesheet" href="/static/assets/scss">
     <link rel="icon" href="/static/assets/image_6483441.JPG">
     <title>| Project ELIMIN8 |</title>
@@ -21,6 +22,7 @@
     background-repeat: no-repeat;
     background-size:100% 100%; */
     body {
+            font-family: 'Poppins', sans-serif;
             background: linear-gradient(-45deg, #ffffff, #ffffff,#e7ffff,#ffffff);
             background-size: 400% 400%;
             animation: gradient 10s ease infinite;
