--- a/Flaskenv/templates/layouts/navbar.html
+++ b/Flaskenv/templates/layouts/navbar.html
@@ -46,9 +46,9 @@
             <a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
         </div>
     </div>
-        <input value="Toggle Mode" type="submit" onclick="darkToggle()" name="DarkToggle" class="btn btn-outline-primary" id="DarkToggle">
+        <!-- <input value="Toggle Mode" type="submit" onclick="darkToggle()" name="DarkToggle" class="btn btn-outline-primary" id="DarkToggle">
 {#        <label class="custom-control-label" for="DarkToggle">Dark Mode</label>#}
-{#        <div class="btn btn-outline-primary" role="button" onclick="DarkToggle()" style="padding-right:10px; cursor: pointer">Toggle Dark Mode</div>#}
+{#        <div class="btn btn-outline-primary" role="button" onclick="DarkToggle()" style="padding-right:10px; cursor: pointer">Toggle Dark Mode</div>#} -->
         <script>
             {#let darkmode = document.body.getElementsByTagName("*");#}
             {#let darkmode = document.querySelector( 'body *' );#}
@@ -85,10 +85,10 @@
         <script type="text/javascript" src=
                 "https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
         </script>
-        <form class="form-inline">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        {# <form class="form-inline">
+           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
-        </form>
+         </form> #}
 {#        <div class="navbar-right">#}
 {#            <div class="navbar-nav">#}
 {#                <a class="nav-link" style="padding-left: 5px" href="{{ url_for('login') }}"><b>Login</b></a>#}
