--- a/Flaskenv/templates/login.html
+++ b/Flaskenv/templates/login.html
@@ -31,13 +31,18 @@
     </div>
 </center>
 <center style="margin-bottom:5rem;">
-    <div class="divider">
+    <div style="width: 30%; height: 20px; border-bottom: 1px solid lightgray; text-align: center; margin-bottom: 2rem">
+        <span style="background-color: #ffffff;padding: 0 5px;">
+          New User?
+        </span>
+      </div>
+    <!-- <div class="divider">
     <hr class="left"/>
     New User?
     <hr class="right"/>
-    <p> <br>
-        <a href="{{ url_for('register') }}">Register</a></p> <br>
-</div>
+    <p> <br> -->
+        <a href="{{ url_for('register') }}">Register</a></p> 
+<!-- </div>  -->
 </center>
 </container>
 </body>
