--- a/Flaskenv/templates/layouts/navbar.html
+++ b/Flaskenv/templates/layouts/navbar.html
@@ -6,9 +6,41 @@
         z-index:999;
         top: 0;
     }
-    nav-link {
+    .nav-link {
         color: #000000;
     }
+    .nav-link {
+        font-weight: bold;
+        font-size: 14px;
+        text-transform: uppercase;
+        text-decoration: none;
+        color: #031D44;
+        padding: 20px 0px;
+        margin: 0px 20px;
+        display: inline-block;
+        position: relative;
+        opacity: 0.75;
+        }
+    .nav-link:hover {
+        opacity: 1;
+        }
+
+    .nav-link::before {
+        transition: 300ms;
+        height: 5px;
+        content: "";
+        position: absolute;
+        background-color: #031D44;
+        }
+
+    .nav-link::before {
+        width: 0%;
+        bottom: 10px;
+        }
+
+    .nav-link:hover::before {
+        width: 100%;
+        }
     {#light {#}
     {#    background-color: #FFFFFF;#}
     {#    color: #000000;#}
@@ -38,11 +70,21 @@
                     <a class="dropdown-item" href={{ url_for('founders') }}>Founders</a>
                 </div>
             </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Get Involved
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="{{ url_for('getinvolved') }}">Get Involved</a>
+                    <a class="dropdown-item" href="{{ url_for('login') }}">Log In</a>
+                    <a class="dropdown-item" href={{ url_for('register') }}>Register</a>
+                </div>
+            </li>
             <!-- url_for is a Jinja2 pre-processor that finds route from function name (def) -->
 {#            <a class="nav-link" href={{ url_for('index') }}></a>#}
-            <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+            <!-- <a class="nav-link" href="{{ url_for('login') }}">Login</a> -->
             <!-- stub is shown using the name of the route -->
-            <a class="nav-link" href="{{ url_for('getinvolved') }}">Get Involved</a>
+            <!-- <a class="nav-link" href="{{ url_for('getinvolved') }}">Get Involved</a> -->
             <a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
         </div>
     </div>
