--- a/Flaskenv/templates/aboutus/partners.html
+++ b/Flaskenv/templates/aboutus/partners.html
@@ -16,11 +16,11 @@
 <h8>
     We are honored to be partnered with the following organizations
 </h8>
-    <div class="row" style="justify-content:center;margin-top:5rem;margin-bottom:2rem;">
+    <div class="row" id="row1">
         <div class="column">
             <div class="card">
                 <center>
-                <img style="width:25rem;height:15rem" src="static/assets/panera.PNG">
+                <img id="partner" src="static/assets/panera.PNG">
                     <a href="https://www.panerabread.com/en-us/home.html">
                     <h9>Panera Bread</h9>
                     </a>
@@ -31,7 +31,7 @@
         <div class="column">
             <div class="card">
                 <center>
-                <img style="width:25rem;height:15rem" src="static/assets/DMHTC_Listing_Gallery_Jimboslogo.jpg">
+                <img id="partner" src="static/assets/DMHTC_Listing_Gallery_Jimboslogo.jpg">
                     <a href="https://jimbos.com/">
                     <h9>Jimbo's</h9>
                     </a>
@@ -42,7 +42,7 @@
         <div class="column">
             <div class="card">
                 <center>
-                <img style="width:25rem;height:15rem" src="static/assets/producegood-logo.jpg">
+                <img id="partner" src="static/assets/producegood-logo.jpg">
                     <a href="https://producegood.org/">
                     <h9>ProduceGood</h9>
                     </a>
@@ -50,11 +50,11 @@
             </div>
         </div>
     </div>
-<div class="row" style="justify-content:center; margin-bottom:5rem;">
+<div class="row" id="row2">
     <div class="column">
         <div class="card">
             <center>
-                <img style="width:25rem;height:15rem" src="static/assets/foundrychurch.jpg">
+                <img id="partner" src="static/assets/foundrychurch.jpg">
                 <a href="http://thefoundryescondido.com/">
                 <h9>Foundry Community Church</h9>
                 </a>
@@ -64,7 +64,7 @@
     <div class="column">
         <div class="card">
             <center>
-                <img style="width:25rem;height:15rem" src="static/assets/DMHTC_Listing_Gallery_Jimboslogo.jpg">
+                <img id="partner" src="static/assets/DMHTC_Listing_Gallery_Jimboslogo.jpg">
                 <h9>Lorem</h9>
             </center>
         </div>
@@ -72,7 +72,7 @@
     <div class="column">
         <div class="card">
             <center>
-                <img style="width:25rem;height:15rem" src="static/assets/producegood-logo.jpg">
+                <img id="partner" src="static/assets/producegood-logo.jpg">
                 <h9>Ipsum</h9>
             </center>
         </div>
