add vision and mission statements

--- a/Flaskenv/templates/layouts/index.html
+++ b/Flaskenv/templates/layouts/index.html
@@ -141,14 +141,14 @@
     </div>
     <div style="position:relative;">
         <div style="color:#000000;background-color:#ffffff;text-align:center;padding:50px 80px;text-align: justify;">
-            <p>We are based in San Diego, California. Feel free to contact us!</p>
+            <p>Our Vision: To eliminate food wastage and starvation in our local communities. </p>
         </div>
         </div>
     <div class="bgimg-3">
     </div>
     <div style="position:relative;">
     <div style="color: #000000;background-color:#ffffff;text-align:center;padding:50px 80px;text-align: justify;">
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <p>Our Mission: To collect surplus food items that restaurants and businesses can no longer sell and distribute them to local food banks, homeless shelters, schools, and other organizations in need.</p>
     </div>
     </div>
 <div class="bgimg-1"></div>
