contact html only

--- a/Flaskenv/templates/contact.html
+++ b/Flaskenv/templates/contact.html
@@ -6,18 +6,15 @@
     <meta charset="UTF-8">
     <title>Project ELIMIN8|Contact</title>
     <style>
-        fart {
-            display: inline-block;
-            border: solid #FCA101;
-            border-width: 0 3px 3px 0;
-            padding: 3px;
-            transform:rotate(-135deg)
+        .inlineforlinks {
+            display:inline
         }
     </style>
 </head>
 {% endblock %}
 {% block body %}
-<div class="fart"></iv>
+<body>
+    <div class="inlineforlinks">
 If you would like to learn more about us, check out the <a href="{{url_for('aboutelimin8') }}">About Page</a> if you haven't already!
 <p>
 Would you like to request a partnership, donate, or just talk to us? Feel free to refer to any of these contact methods below!
@@ -34,6 +31,7 @@ Instagram: <a href="https://www.instagram.com/elimin8sd/?hl=en">@elimin8sd</a>
 LinkedIn: <a href="">We don't have one yet!</a>
 <br>
 To view the source code of this website, please refer to the <a href="https://github.com/peacekeeper6/ELIMIN8">GitHub Repository</a>
+</div>
 </body>
 {% endblock %}
 </html>
