phrasing changes in about

--- a/Flaskenv/templates/aboutus/aboutelimin8.html
+++ b/Flaskenv/templates/aboutus/aboutelimin8.html
@@ -24,7 +24,7 @@
       <div id="kard2" class="kard">
         <div class="title">
           <h1>What does Project ELIMIN8 do?</h1>
-          <p>Members of Project ELIMIN8 pick up surplus food and donate it to organizations in need weekly. We set up connections between organizations that give us surplus food and organizations that are in need of it. That way, we are able to help separate causes with maximal effectiveness.</p>
+          <p>Members of Project ELIMIN8 pick up surplus food and donate it to organizations weekly. We set up relations between organizations that give us surplus food and donate to organizations that are in need of it. That way, we are able to help both causes with maximal effectiveness.</p>
         </div>
         <img id="slide-image1" src="/static/assets/pant.jpg">
         <img id="slide-image2" src="/static/assets/chin.jpg"> 
@@ -33,7 +33,7 @@
       <div id="kard3" class="kard">
         <div class="title">
           <h1>How can I get involved?</h1>
-          <p>To become a member, you can register through our <a href="{{ url_for('register') }}">Register Page</a>. After creating an account, we will be in contact with you as soon as possible in order to set up a connection within your area. For donations (food only), unanswered questions, and anything in general, refer to our <a href="{{ url_for('contact') }}">Contact Page</a>.</p>
+          <p>To become a member, you can register through our <a href="{{ url_for('register') }}">Register Page</a>. After creating an account, we will be in contact with you as soon as possible in order to set up a connection within your area. For donations (food only), unanswered questions, and anything in general, please refer to our <a href="{{ url_for('contact') }}">Contact Page</a>.</p>
         </div>
       </div>
 </body>
