--- a/Flaskenv/templates/layouts/navbar.html
+++ b/Flaskenv/templates/layouts/navbar.html
@@ -61,6 +61,7 @@
                     <a class="dropdown-item" href={{ url_for('register') }}>Register</a>
                 </div>
             </li>
+            <a class="nav-link" href="{{ url_for('donation') }}">Donation Form</a>
             <a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
         </div>
     </div>
