--- a/Flaskenv/static/styles/login.css
+++ b/Flaskenv/static/styles/login.css
@@ -1,64 +1,82 @@
+h1, body, .input, div {
+    font-family: 'Poppins', sans-serif;
+}
 h1 {
     display:flex;
     justify-content: center;
     color: #000000;
     margin-bottom:5rem;
     margin-top:5rem;
-    font-family: 'Poppins', sans-serif;
 }
 hr {
     width: 50%;
 }
-.left {
-    float:left;
-}
-
-.right {
-    float:right;
-}
-.divider {
-    width:500px;
-    text-align:center;
-}
-
-.divider hr {
-    margin-left:auto;
-    margin-right:auto;
-    width:40%;
-
-}
-body {
-    font-family: 'Poppins', sans-serif;
-    /* margin: 0;
-    padding: 0;
-    background: linear-gradient(to bottom right, #E3F0FF, #FAFCFF);
-    height: 100vh;
-    {#justify-content: center;#}
-    {#align-items: center;#} */
-    /* background-image: url({{ url_for('static', filename='assets/background.jpg') }});
-    background-repeat: no-repeat;
-    background-size:100% 100%;
-    min-height: 100%; */
-}
 container {
-    /* align-items: center;
-    align-content: center;
-    justify-content: center; */
     padding-top:5rem;
     margin: auto;
     width: 50rem;
-    height: 85%;
     background-color: #ffffff; 
     border-radius: 15px;
-    /* border-radius: 20px; */
     box-shadow: 0px 25px 40px #1687d933;
-    margin-bottom:3rem;
+    margin-bottom:5rem;
 }
 .input {
     height:3rem;
-    font-family: 'Poppins', sans-serif;
 }
 .form-group {
     width: 250px;
     margin-top:2rem
 }
+#divpadding, #h1padding {
+    padding-bottom: 3rem
+}
+#h1padding {
+    padding-top:3rem;
+}
+#centerpadding {
+    margin-bottom:5rem
+}
+#spancss {
+    background-color: #ffffff;
+    padding: 0 5px;
+}
+#newuser {
+    width: 30%; 
+    height: 20px; 
+    border-bottom: 1px solid lightgray; 
+    text-align: center; 
+    margin-bottom: 2rem
+}
+.scroll-text {
+    margin-bottom: 3rem;
+    -moz-transform: translateX(100%);
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%);
+    
+    -moz-animation: my-animation 15s linear infinite;
+    -webkit-animation: my-animation 15s linear infinite;
+    animation: my-animation 15s linear infinite;
+    }
+
+    @-moz-keyframes my-animation {
+    from { -moz-transform: translateX(100%); }
+    to { -moz-transform: translateX(-100%); }
+    }
+
+    @-webkit-keyframes my-animation {
+    from { -webkit-transform: translateX(100%); }
+    to { -webkit-transform: translateX(-100%); }
+    }
+
+    @keyframes my-animation {
+    from {
+        -moz-transform: translateX(100%);
+        -webkit-transform: translateX(100%);
+        transform: translateX(100%);
+    }
+    to {
+        -moz-transform: translateX(-100%);
+        -webkit-transform: translateX(-100%);
+        transform: translateX(-100%);
+    }
+} 
