--- a/Flaskenv/templates/layouts/navbar.html
+++ b/Flaskenv/templates/layouts/navbar.html
@@ -58,7 +58,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="{{ url_for('getinvolved') }}">Get Involved</a>
                     <a class="dropdown-item" href="{{ url_for('login') }}">Log In</a>
-                    <a class="dropdown-item" href={{ url_for('register') }}>Register</a>
+                    <a class="dropdown-item" href="{{ url_for('register') }}">Register</a>
                 </div>
             </li>
             <a class="nav-link" href="{{ url_for('donation') }}">Donation Form</a>
