--- a/Flaskenv/templates/layouts/footer.html
+++ b/Flaskenv/templates/layouts/footer.html
@@ -9,7 +9,7 @@
                     <h3>About</h3>
                     <ul>
                         <li><a href="{{ url_for('aboutelimin8') }}">About Project ELIMIN8</a></li>
-                        <li><a href="{{ url_for('getinvolved') }}">Get Involved</a></li>
+                        <!-- <li><a href="{{ url_for('getinvolved') }}">Get Involved</a></li> -->
                         <li><a href="{{ url_for('partners') }}">Partners</a></li>
                         <li><a href="{{ url_for('founders') }}">Founders</a></li>
                     </ul>
