--- a/Flaskenv/templates/layouts/navbar.html
+++ b/Flaskenv/templates/layouts/navbar.html
@@ -56,7 +56,7 @@
                     Get Involved
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="{{ url_for('getinvolved') }}">Get Involved</a>
+                    <!-- <a class="dropdown-item" href="{{ url_for('getinvolved') }}">Get Involved</a> -->
                     <a class="dropdown-item" href="{{ url_for('login') }}">Log In</a>
                     <a class="dropdown-item" href="{{ url_for('register') }}">Register</a>
                 </div>
